<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>org.openmrs.module</groupId>
	<artifactId>registrationapp</artifactId>
	<version>1.26.0-SNAPSHOT</version>
	<packaging>pom</packaging>
	<name>Registration App Module</name>
	<description>Registration App for the Reference Application</description>
	<url>https://wiki.openmrs.org/display/docs/Registration+App+Module+Module</url>

	<developers>
		<developer>
			<name>OpenMRS</name>
		</developer>
	</developers>

	<organization>
		<name>OpenMRS</name>
		<url>https://openmrs.org</url>
	</organization>

	<scm>
		<connection>scm:git:git@github.com:openmrs/openmrs-module-registrationapp.git</connection>
		<developerConnection>scm:git:git@github.com:openmrs/openmrs-module-registrationapp.git</developerConnection>
		<url>scm:git:git@github.com:openmrs/openmrs-module-registrationapp.git</url>
        <tag>HEAD</tag>
	</scm>

	<modules>
		<module>api</module>
		<module>web-1.9</module>
		<module>web-2.0</module>
		<module>omod</module>
	</modules>

	<properties>
		<openMRSVersion>1.9.9</openMRSVersion>
        <uiframeworkVersion>3.9</uiframeworkVersion>
        <appframeworkVersion>2.15.0</appframeworkVersion>
        <springVersion>3.0.5.RELEASE</springVersion>
        <idgenVersion>4.4.0</idgenVersion>
        <uicommonsVersion>2.4.0</uicommonsVersion>
        <emrapiVersion>1.18</emrapiVersion>
        <calculationVersion>1.2</calculationVersion>
        <providerManagementVersion>2.5.0</providerManagementVersion>
        <registrationcoreVersion>1.8.0</registrationcoreVersion>
        <reportingModuleVersion>0.10.4</reportingModuleVersion>
        <addresshierarchyVersion>2.9</addresshierarchyVersion>
        <htmlformentryVersion>3.3.0</htmlformentryVersion>
        <appuiVersion>1.7</appuiVersion>
        <coreappsVersion>1.11.1</coreappsVersion>
        <serializationXstreamModuleVersion>0.2.12</serializationXstreamModuleVersion>
        <eventVersion>2.8.0</eventVersion>
        <groovyVersion>1.8.7</groovyVersion>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencies>

        <!-- Begin OpenMRS core -->

        <dependency>
            <groupId>org.openmrs.api</groupId>
            <artifactId>openmrs-api</artifactId>
            <version>${openMRSVersion}</version>
            <type>jar</type>
            <scope>provided</scope>
            <exclusions>
				<exclusion>
					<artifactId>javassist</artifactId>
					<groupId>javassist</groupId>
				</exclusion>
			</exclusions>
        </dependency>

        <dependency>
            <groupId>org.openmrs.web</groupId>
            <artifactId>openmrs-web</artifactId>
            <version>${openMRSVersion}</version>
            <type>jar</type>
            <scope>provided</scope>
            <exclusions>
				<exclusion>
					<artifactId>javassist</artifactId>
					<groupId>javassist</groupId>
				</exclusion>
			</exclusions>
        </dependency>

        <dependency>
            <groupId>org.openmrs.api</groupId>
            <artifactId>openmrs-api</artifactId>
            <version>${openMRSVersion}</version>
            <type>test-jar</type>
            <scope>test</scope>
            <exclusions>
				<exclusion>
					<artifactId>javassist</artifactId>
					<groupId>javassist</groupId>
				</exclusion>
			</exclusions>
        </dependency>

        <dependency>
            <groupId>org.openmrs.web</groupId>
            <artifactId>openmrs-web</artifactId>
            <version>${openMRSVersion}</version>
            <type>test-jar</type>
            <scope>test</scope>
            <exclusions>
				<exclusion>
					<artifactId>javassist</artifactId>
					<groupId>javassist</groupId>
				</exclusion>
			</exclusions>
        </dependency>

        <dependency>
            <groupId>org.openmrs.test</groupId>
            <artifactId>openmrs-test</artifactId>
            <version>${openMRSVersion}</version>
            <type>pom</type>
            <scope>test</scope>
            <exclusions>
				<exclusion>
					<artifactId>javassist</artifactId>
					<groupId>javassist</groupId>
				</exclusion>
			</exclusions>
        </dependency>

        <!-- End OpenMRS core -->

        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>idgen-api</artifactId>
            <version>${idgenVersion}</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>emrapi-api</artifactId>
            <version>${emrapiVersion}</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>appui-api</artifactId>
            <version>${appuiVersion}</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>coreapps-api</artifactId>
            <version>${coreappsVersion}</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>calculation-api</artifactId>
            <version>${calculationVersion}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>providermanagement-api</artifactId>
            <version>${providerManagementVersion}</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>uiframework-api</artifactId>
            <version>${uiframeworkVersion}</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>appframework-api</artifactId>
            <version>${appframeworkVersion}</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>uicommons-api</artifactId>
            <version>${uicommonsVersion}</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>registrationcore-api</artifactId>
            <version>${registrationcoreVersion}</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>addresshierarchy-api</artifactId>
            <version>${addresshierarchyVersion}</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>reporting-api</artifactId>
            <version>${reportingModuleVersion}</version>
            <scope>provided</scope>
        </dependency>

        <!-- OpenMRS modules simply required to fire up the application context when running component tests -->



        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>serialization.xstream-api</artifactId>
            <version>${serializationXstreamModuleVersion}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>serialization.xstream-api-1.9</artifactId>
            <version>${serializationXstreamModuleVersion}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>serialization.xstream-api-1.10</artifactId>
            <version>${serializationXstreamModuleVersion}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>serialization.xstream-api-2.0</artifactId>
            <version>${serializationXstreamModuleVersion}</version>
            <scope>test</scope>
        </dependency>


        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>htmlformentry-api</artifactId>
            <version>${htmlformentryVersion}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.openmrs</groupId>
            <artifactId>event-api</artifactId>
            <version>${eventVersion}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
			<groupId>org.codehaus.groovy</groupId>
			<artifactId>groovy-all</artifactId>
			<version>${groovyVersion}</version>
			<type>jar</type>
			<scope>provided</scope>
		</dependency>


        <!-- End OpenMRS modules -->

        <!-- start other dependencies -->

        <!-- end other dependencies -->

    </dependencies>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<configuration>
						<target>1.6</target>
						<source>1.6</source>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.openmrs.maven.plugins</groupId>
					<artifactId>maven-openmrs-plugin</artifactId>
					<version>1.0.1</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-dependency-plugin</artifactId>
					<version>2.4</version>
				</plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-release-plugin</artifactId>
                    <version>2.4.2</version>
                    <configuration>
                        <autoVersionSubmodules>true</autoVersionSubmodules>
                        <tagNameFormat>@{project.version}</tagNameFormat>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-javadoc-plugin</artifactId>
                    <version>2.9.1</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>2.22.1</version>
                    <configuration>
                        <runOrder>alphabetical</runOrder>
                        <!-- https://talk.openmrs.org/t/error-could-not-find-or-load-main-class-org-apache-maven-surefire-booter-forkedbooter/20509 -->
                        <argLine>-Xmx1024m -XX:MaxPermSize=512m -Djdk.net.URLClassPath.disableClassPathURLCheck=true</argLine>
                    </configuration>
                </plugin>
                <plugin>
					<groupId>com.googlecode.maven-java-formatter-plugin</groupId>
					<artifactId>maven-java-formatter-plugin</artifactId>
					<version>0.3</version>
					<configuration>
						<compilerSource>${javaCompilerVersion}</compilerSource>
						<compilerCompliance>${javaCompilerVersion}</compilerCompliance>
						<compilerTargetPlatform>${javaCompilerVersion}</compilerTargetPlatform>
						<configFile>eclipse/OpenMRSFormatter.xml</configFile>
						<overrideConfigCompilerVersion>true</overrideConfigCompilerVersion>
					</configuration>
					<dependencies>
						<dependency>
							<groupId>org.openmrs.tools</groupId>
							<artifactId>openmrs-tools</artifactId>
							<version>${project.version}</version>
						</dependency>
					</dependencies>
				</plugin>
            </plugins>
		</pluginManagement>
	</build>

	<repositories>
		<repository>
			<id>openmrs-repo</id>
			<name>OpenMRS Nexus Repository</name>
			<url>https://mavenrepo.openmrs.org/nexus/content/repositories/public</url>
		</repository>
		<repository>
	        <id>rubygems-releases</id>
	        <url>http://rubygems-proxy.torquebox.org/releases</url>
		</repository>
	</repositories>

	<pluginRepositories>
		<pluginRepository>
			<id>openmrs-repo</id>
			<name>OpenMRS Nexus Repository</name>
			<url>https://mavenrepo.openmrs.org/public</url>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</pluginRepository>
	</pluginRepositories>

    <distributionManagement>
        <repository>
            <id>openmrs-repo-modules</id>
            <name>OpenMRS Modules</name>
            <url>https://mavenrepo.openmrs.org/modules</url>
        </repository>
        <snapshotRepository>
            <id>openmrs-repo-snapshots</id>
            <name>OpenMRS Snapshots</name>
            <url>https://mavenrepo.openmrs.org/snapshots</url>
        </snapshotRepository>
    </distributionManagement>

</project>
